--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,18 @@
 # .github/workflows/ci.yml
-name: CI Workflow
+name: CI
 
 on:
   push:
     branches:
-      - main  # or "master" based on your default branch
+      - main
 
 jobs:
-  build:
+  example:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
+      - name: Print Hello
+        run: echo "Hello from GitHub Actions!"
